--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Todo</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="root"></div>
