Implement get-element-path

--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Todo</title>
+    <title>Inspector</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
