--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Inspector</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <div id="root"></div>
