--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -6,9 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/attributes.css">
+    <link rel="stylesheet" href="css/statecharts.css">
+    <link rel="stylesheet" href="css/dot-selection.css">
+    <link rel="stylesheet" href="css/inspector.css">
     <link rel="stylesheet" href="css/todo.css">
-    <link rel="stylesheet" href="css/attribute.css">
   </head>
   <body>
     <div id="root"></div>
