--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/attributes.css">
+    <link rel="stylesheet" href="css/frameset.css">
     <link rel="stylesheet" href="css/statecharts.css">
     <link rel="stylesheet" href="css/dot-selection.css">
     <link rel="stylesheet" href="css/inspector.css">
