--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/statecharts.css">
     <link rel="stylesheet" href="css/dot-selection.css">
     <link rel="stylesheet" href="css/inspector.css">
-    <link rel="stylesheet" href="css/todo.css">
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
