--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/statecharts.css">
     <link rel="stylesheet" href="css/dot-selection.css">
     <link rel="stylesheet" href="css/inspector.css">
+    <link rel="stylesheet" href="css/source.css">
   </head>
   <body>
     <div id="root"></div>
