--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/base.js"></script>
   </body>
 </html>
