Query components dynamically
- display components as list in sidebar

--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/dot-selection.css">
     <link rel="stylesheet" href="css/inspector.css">
     <link rel="stylesheet" href="css/source.css">
+    <link rel="stylesheet" href="css/ide.css">
   </head>
   <body>
     <div id="root"></div>
