Rework style with tailwind

--- a/prototypes/inspector/public/index.html
+++ b/prototypes/inspector/public/index.html
@@ -5,15 +5,9 @@
     <title>Inspector</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/attributes.css">
-    <link rel="stylesheet" href="css/frameset.css">
-    <link rel="stylesheet" href="css/statecharts.css">
-    <link rel="stylesheet" href="css/dot-selection.css">
-    <link rel="stylesheet" href="css/inspector.css">
-    <link rel="stylesheet" href="css/source.css">
-    <link rel="stylesheet" href="css/ide.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/helpers.css">
+    <link rel="stylesheet" href="css/icons.css">
   </head>
   <body>
     <div id="root"></div>
